k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: blackjack
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: europe-west1-docker.pkg.dev/sublime-lyceum-498409-j6/blackjack/blackjack-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: model-policy
              mountPath: /app/app/predictor/policy.pkl
              subPath: policy.pkl
              readOnly: true
      volumes:
        - name: model-policy
          configMap:
            name: blackjack-policy
            optional: true
